[build-system]
requires = ["setuptools", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "numba-progress"
authors = [
    {name = "Felix Igelbrink", email = "felix.igelbrink@dfki.de"},
]
description = 'A tqdm-compatible progress bar implementation for numba functions'
readme = "README.md"
requires-python = ">= 3.10"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    'numba>=0.52',
    'numpy',
    'tqdm'
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[project.urls]
Homepage = "https://github.com/mortacious/numba-progress"
Issues = "https://github.com/mortacious/numba-progress/issues"

[tool.setuptools]
license-files = ["../LICENSE"]

[tool.setuptools_scm]
write_to = "numba_progress/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = [
    'numba_progress'
]
